test/integration/bad/err-fun-bare-types-int.stan
functions {
  array[3] real foo() {
    array[3] real a;
    return a;
  }
}
model {
}
